# bio-utils

./: .gitignore  CMakeLists.txt  Readme.md
scripts/: get-spktimes-from-raw.m
scripts/preprocessing/: get-spktimes-from-raw.m  rm-spktimes.m
scripts/spk-times/: spk-times  spk-times.cpp
spk-times/: CMakeLists.txt
